--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ even on days you don’t realize you should be.
 <p>
 I remember seeing you around college long before we actually talked.
 Back then, it was nothing big — just passing moments,
-random eye contact, and me quietly noticing you without knowing why.
+ and me quietly noticing you without knowing why.
 At the time, I had no idea that those small moments would matter later.
 </p>
 <p>
@@ -296,6 +296,7 @@ and somehow that makes it feel more genuine.
 In just one month, you’ve become such a natural part of my everyday life
 that I wanted to acknowledge it,
 even if it’s just quietly, like this.
+  and i wanna say that this coming year if i make any mistake, Just tell me and please don't stop talking to me because of some silly mistake just tell me ill fix it
 </p>
 <button onclick="goToPage(5)">Last page ✨</button>
 </div>
