--- a/index.html
+++ b/index.html
@@ -244,10 +244,9 @@ that simple beginning slowly changed the way my days felt.
 Before I realized it, you became the person I looked forward to hearing from,
 the conversation that made even ordinary days feel lighter
 and a little more meaningful.
-    And Just so you know, Im gonna tell you about every game i play because gaming is one of my favorite things to do (ofc other than talking to you) And yeah You don't have to stay silent, tell me everything you do too.
 </p>
     <p> I hope you feel the same way about me.
-        and, I hope this our conversations go beyond instagrams the coming year and maybe just maybe we start talking in real life too. </p>
+        and, I hope our conversations go beyond instagram the coming year and maybe just maybe we start talking in real life too. </p>
 <button onclick="goToPage(3)">Next 🤍</button>
 </div>
 </div>
@@ -352,6 +351,11 @@ If you’re ever sad, tell me — I’ll always try to cheer you up.
 I know I talk a lot, but that’s only because I’m comfortable with you.
 And if I ever cut you off, just tell me —
 sometimes I get selfish because I don’t want the conversation to end.
+
+ And Just so you know, Im gonna tell you about every game i play because gaming is one of my favorite things to do (ofc other than talking to you) And yeah You don't have to stay silent, tell me everything you do too.
+
+I hope Sometime we hangout like at the lake, but i was late and at the mall
+you were with Family.
 
 This might seem weird for someone I only started talking to a month ago,
 but you’re genuinely my favorite person right now.
