--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ setInterval(createHeart,450);
         song1: document.getElementById("song1"),
         song2: document.getElementById("song2"),
         song3: document.getElementById("song3"),
-        song4: document.getElementById("song4")
+        song4: document.getElementById("song4"),
         song5: document.getElementById("song5"),
 
     };
