--- a/index.html
+++ b/index.html
@@ -192,12 +192,17 @@ input{
     <audio id="song2" src="song2.mp3"></audio>
     <audio id="song3" src="song3.mp3"></audio>
     <audio id="song4" src="mysong.mp3"></audio>
+    <audio id="song5" src="song5.mp3"></audio>
+
 
     <div class="music-panel">
         <button onclick="playSong('song1')">Your fav ♡</button>
         <button onclick="playSong('song2')">Another one ♫</button>
         <button onclick="playSong('song3')">This too 🎶</button>
         <button onclick="playSong('song4')">Your only Favourite (ME) → 🎤</button>
+        <button onclick="playSong('song5')">Another ME ♡</button>
+
+
     </div>
 
 
@@ -244,10 +249,10 @@ that simple beginning slowly changed the way my days felt.
 Before I realized it, you became the person I looked forward to hearing from,
 the conversation that made even ordinary days feel lighter
 and a little more meaningful.
-    And Just so you know, Im gonna tell you about every game i play because gaming is one of my favorite things to do (ofc other than talking to you) And yeah You don't have to stay silent, tell me everything you do too.
 </p>
     <p> I hope you feel the same way about me.
-        and, I hope this our conversations go beyond instagrams the coming year and maybe just maybe we start talking in real life too. </p>
+        and, I hope this our conversations go beyond instagrams the coming year and maybe just maybe we start talking in real life too.
+    And whatever Happens don't stop talking to me, if im wrong just tell me</p>
 <button onclick="goToPage(3)">Next 🤍</button>
 </div>
 </div>
@@ -351,6 +356,10 @@ If you’re ever sad, tell me — I’ll always try to cheer you up.
 I know I talk a lot, but that’s only because I’m comfortable with you.
 And if I ever cut you off, just tell me —
 sometimes I get selfish because I don’t want the conversation to end.
+and yeah i'm gonna continue talking about my games cuz they are part of me i can never forget
+and you are one of those too now, sometimes we have nothing to talk about,
+sometimes we have a lot to talk about but no time, i hope you spending the free time talking to me,
+and ofc don't skip your studies for me *angry cat emoji*
 
 This might seem weird for someone I only started talking to a month ago,
 but you’re genuinely my favorite person right now.
@@ -407,7 +416,9 @@ setInterval(createHeart,450);
         song1: document.getElementById("song1"),
         song2: document.getElementById("song2"),
         song3: document.getElementById("song3"),
-        song4: document.getElementById("song4")
+        song4: document.getElementById("song4"),
+        song5: document.getElementById("song5")
+
     };
 
     function playSong(id) {
