code change index.html

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ And if I ever cut you off, just tell me —
 sometimes I get selfish because I don’t want the conversation to end.
 and yeah i'm gonna continue talking about my games cuz they are part of me i can never forget
 and you are one of those too now, sometimes we have nothing to talk about,
-sometimes we have a lot to talk about but no time, i hope you spending the free time talking to me,
+sometimes we have a lot to talk about but no time, i hope you spend the free time talking to me,
 and ofc don't skip your studies for me *angry cat emoji*
 
 This might seem weird for someone I only started talking to a month ago,
@@ -382,7 +382,7 @@ function unlockEgg(){
     fireworks();
 }
 
-const secretCode="NP"; // CHANGE TO HER INITIALS
+const secretCode="1130"; 
 function checkCode(val){
     if(val.toUpperCase().includes(secretCode)){
         document.getElementById("codeEgg").style.display="block";
