--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ even on days you don’t realize you should be.
 <p>
 I remember seeing you around college long before we actually talked.
 Back then, it was nothing big — just passing moments,
-random eye contact, and me quietly noticing you without knowing why.
+ and me quietly noticing you without knowing why.
 At the time, I had no idea that those small moments would matter later.
 </p>
 <p>
